2002-05-28  Sam Steingold  <sds@gnu.org>

	* socket.d (connect_via_ip): when 0 timeout is given return
	immediately (do not wait at all); the next i/o operation on this
	socket might block - use SOCKET-STATUS to check that

2002-05-29  Bruno Haible  <bruno@clisp.org>

	Speed up the loading of type.lisp.
	* lispbibl.d (Encoding): Add a maxintervals argument to the enc_range
	function.
	(Encoding_range): Update.
	* stream.d (iconv_range): Add a maxintervals argument.
	* encoding.d (all_range): Likewise.
	(bmp_range): Likewise.
	(nls_range): Likewise.
	(SYSTEM::CHARSET-TYPEP): Update.
	(SYSTEM::CHARSET-RANGE): Add optional maxintervals argument.
	* pseudofun.d (all_range, nls_range, iconv_range): Add a maxintervals
	argument.
	* type.lisp (get-charset-range): Add optional maxintervals argument.

2002-05-29  Bruno Haible  <bruno@clisp.org>

	Upgrade CHAR-WIDTH and STRING-WIDTH to Unicode 3.2.
	* streq.h: New file, from libunistring-0.0.
	* cjk.h: New file, from libunistring-0.0.
	* uniwidth.h: New file, from libunistring-0.0.
	* width.c: New file, from libunistring-0.0.
	* charstrg.d (nonspacing_table_data, nonspacing_table_ind): Remove
	arrays. Instead include width.c.
	(char_width): Rewritten to use uc_width.
	* spvw.d (locale_encoding): New variable.
	* encoding.d (init_dependent_encodings): Initialize locale_encoding.

2002-05-28  Sam Steingold  <sds@gnu.org>

	* stream.d (buffered_half_flush, buffered_full_flush): removed
	(buffered_flush): always do what buffered_half_flush() used to do

2002-05-28  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (STACK_register): Fix #if condition.

2002-05-28  Bruno Haible  <bruno@clisp.org>

	* makemake.in (XCC_GCC_VERSION): Update for gcc 3.1.
	(XCFLAGS): With gcc 3.1, add -fno-gcse.

2002-05-28  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (setSP, FAST_SP) [I80386]: Don't define when using
	gcc-3.1.

2002-05-26  Bruno Haible  <bruno@clisp.org>

	Assume <locale.h> exists.
	* m4/locale.m4: Remove file.